# CodeRefineAI

./: .gitignore  README.md  accuracy.txt  env.sh  pyproject.toml
coderefineai_executor/: README.md  setup.py
coderefineai_executor/tests/: test_executor.py
core/: pyproject.toml  setup.py
core/data/: code_data_sample.json  preprocessing.ipynb
core/executor/: __init__.py  config.py  executor.py  main.py  pyproject.toml  solution.py  test.py  tool.py
core/executor/utils/: base64.py
core/metrics/: crystal_bleu.py
core/utils/: ast.py  template.py
dataset/: Inefficient_reasoning_bter_KG.html  Test_result_200_meta.json  dataset.json  dataset_preview.json  download_google_data_to_local.py  final_result.ipynb  final_result_ReasoningBased.ipynb  final_result_Self_Feedback.ipynb  final_results.ipynb  optimized_test_results_T5.json  optimized_test_results_meta (1).json  optimized_test_results_meta.json  preprocessing.ipynb  preprocessing_t copy.ipynb  preprocessing_t.ipynb  processing_dataset.ipynb  result.ipynb  structured_interactive_graph.html  venus_test_cases_sample.json
dataset/P1/: balanced_samples_gemini_codegen_submissions.json  balanced_samples_llama_codegen_submissions.json  meta_vanilla.json
dataset/P2/: result_llama.ipynb  (+9 more)
llm/: Vanilla prompting.ipynb  call_llm_inference.py  identify_inefficient_code.py  identify_inefficient_code_gemini.py  self_feedback_loop_inference.py  test_executor.ipynb
output/: accuracy_genimi_v2.txt  accuracy_llama_v2.txt
src/: execution.ipynb  main.py  notebook.ipynb  reference.ipynb  solution.py
test/: test_gemini.py
(+53 files in other folders)
