[tool.poetry]
name = "core"
version = "0.1.0"
description = "Code Executor Abstraction For RCE of Code"
authors = ["harish876 <harishgokul01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"
crystalbleu = "^0.1"
nltk = "^3.9.1"
codebleu = "^0.7.0"
tree-sitter-python = "0.21"
pygments = "^2.19.1"
matplotlib = "^3.10.0"
numpy = "^2.2.2"
radon = "^6.0.1"
llm-sandbox = "^0.2.1"
pandas = "^2.2.3"
smolagents = {extras = ["litellm"], version = "^1.8.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
