[tool.poetry]
name = "executor"
version = "0.1.0"
description = "Code Executor Abstraction For RCE of Code"
authors = ["harish876 <harishgokul01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pydantic = "^2.10.6"
pydantic-settings = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
